# iranrobot-fullstack

./: .gitignore  README.md
backend/frappe-bench/apps/iranrobot_backend/: .gitignore  MANIFEST.in  README.md  pyproject.toml
backend/frappe-bench/apps/iranrobot_backend/data/: catalog_snapshot.json
backend/frappe-bench/apps/iranrobot_backend/iranrobot_backend/: hooks.py  modules.txt  patches.txt  website.py
backend/frappe-bench/apps/iranrobot_backend/iranrobot_backend/api/: _response.py  _session.py  account.py  auth.py  catalog.py  invoices.py  orders.py  requests.py  wallet.py
backend/frappe-bench/apps/iranrobot_backend/iranrobot_backend/catalog/: slug.py
backend/frappe-bench/apps/iranrobot_backend/iranrobot_backend/commands/: _phase5_smoke.py  _phase7_e2e_fixtures.py  _phase7a1_smoke.py  _phase7a_setup_check.py  _phase7a_smoke.py  _phase7b_smoke.py  _phase7c_smoke.py  _phase7d_smoke.py  _phase8a_smoke.py  _phase8b_smoke.py  _phase8c_e2e_fixtures.py  _phase8c_hardening_smoke.py  _phase8d1_smoke.py  _phase8d2_smoke.py  _phase8d3_e2e_fixtures.py  _phase8d3_smoke.py  _phase8d_accounting_spike.py  _phase8e_smoke.py  audit_robotsasia_dedup.py  clear_robotsasia_logo_images.py  erpnext_bootstrap.py  fix_magicbot_g1_classification.py  import_robotsasia_cobots.py  import_robotsasia_products.py  seed_catalog.py  sync_to_erpnext.py  unpublish_robotsasia_duplicates.py  wallet_accounting_backfill.py  wallet_accounting_bootstrap.py  wallet_reconcile.py
backend/frappe-bench/apps/iranrobot_backend/scripts/: README.md  export_catalog.mts
tests/: README.md  package.json
(+184 files in other folders)
